--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <br>
   <a href="/documents">我的文档</a><br>
   <a href="/works">works</a> <br>
+  <a href="/react">react-demos</a> <br>
 
     <script type="text/javascript" src="/lib/utils/lodash.js" ></script>
     <script type="text/javascript" src="/lib/utils/Immutable.js" ></script>
