use relative path

--- a/css/index.html
+++ b/css/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/css</title></head><body><a href="/css/base.css">/css/base.css</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title></title>
+    </head>
+    <body><a href="base.css">base.css</a>
+ <br/></body>
+  </html>
