--- a/documents/development/c++/成员函数的指针.html
+++ b/documents/development/c++/成员函数的指针.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/documents/development/css/documentation.css">
+    <link rel="stylesheet" href="../css/documentation.css">
     <style type="text/css">
       li { font-size:26px; color:gray }
     </style>
