--- a/documents/development/css/index.html
+++ b/documents/development/css/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/documents/development/css</title></head><body><a href="/documents/development/css/style.css">style.css</a> <br/> <a href="/documents/development/css/documentation.css">documentation.css</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title>development/css</title>
+    </head>
+    <body><a href="style.css">style.css</a>
+ <br/> <a href="documentation.css">documentation.css</a>
+ <br/></body>
+  </html>
