--- a/documents/development/html/index.html
+++ b/documents/development/html/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/documents/development/html</title></head><body><a href="/documents/development/html/play-with-basic-html-tag.html">play-with-basic-html-tag.html</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title>development/html</title>
+    </head>
+    <body><a href="play-with-basic-html-tag.html">play-with-basic-html-tag.html</a>
+ <br/></body>
+  </html>
