--- a/documents/development/index.html
+++ b/documents/development/index.html
@@ -1,1 +1,20 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/documents/development</title></head><body><a href="/documents/development/ios">ios/</a> <br/> <a href="/documents/development/javascript">javascript/</a> <br/> <a href="/documents/development/shell">shell/</a> <br/> <a href="/documents/development/mac">mac/</a> <br/> <a href="/documents/development/linux">linux/</a> <br/> <a href="/documents/development/git">git/</a> <br/> <a href="/documents/development/design pattern">design pattern/</a> <br/> <a href="/documents/development/xml">xml/</a> <br/> <a href="/documents/development/html">html/</a> <br/> <a href="/documents/development/css">css/</a> <br/> <a href="/documents/development/c++">c++/</a> <br/> <a href="/documents/development/books-to-read.html">books-to-read.html</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title>development</title>
+    </head>
+    <body><a href="xml/">xml/</a>
+ <br/> <a href="shell/">shell/</a>
+ <br/> <a href="mac/">mac/</a>
+ <br/> <a href="linux/">linux/</a>
+ <br/> <a href="javascript/">javascript/</a>
+ <br/> <a href="ios/">ios/</a>
+ <br/> <a href="html/">html/</a>
+ <br/> <a href="git/">git/</a>
+ <br/> <a href="design pattern/">design pattern/</a>
+ <br/> <a href="css/">css/</a>
+ <br/> <a href="c++/">c++/</a>
+ <br/> <a href="books-to-read.html">books-to-read.html</a>
+ <br/></body>
+  </html>
