--- a/documents/development/ios/codesign/lib/index.html
+++ b/documents/development/ios/codesign/lib/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/documents/development/ios/codesign/lib</title></head><body><a href="/documents/development/ios/codesign/lib/ios-app-utils.sh.txt">ios-app-utils.sh.txt</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title>development/ios/codesign/lib</title>
+    </head>
+    <body><a href="ios-app-utils.sh.txt">ios-app-utils.sh.txt</a>
+ <br/></body>
+  </html>
