--- a/documents/development/ios/coding convention/objective-c-coding-convention.html
+++ b/documents/development/ios/coding convention/objective-c-coding-convention.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/documents/development/css/style.css" >
-    <link rel="stylesheet" type="text/css" href="/documents/development/css/documentation.css" >
-    <script type="text/javascript" src="/lib/utils/URI.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../css/style.css" >
+    <link rel="stylesheet" type="text/css" href="../../css/documentation.css" >
+    <script type="text/javascript" src="../../../../lib/utils/URI.js"></script>
     <script type="text/javascript">
       var uri = URI(window.location.href);
       document.title = uri.filename();
