--- a/documents/development/ios/universal-link/test-universal-link.html
+++ b/documents/development/ios/universal-link/test-universal-link.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <script type="text/javascript" src="/js/utils/URI.js"></script>
+  <script type="text/javascript" src="../../../../lib/utils/URI.js"></script>
   <script type="text/javascript">
     var uri = URI(window.location.href);
     document.title = uri.filename();
