--- a/documents/development/javascript/index.html
+++ b/documents/development/javascript/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/documents/development/javascript</title></head><body><a href="/documents/development/javascript/eslintrc.json.txt">eslintrc.json.txt</a> <br/> <a href="/documents/development/javascript/flow">flow/</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title>development/javascript</title>
+    </head>
+    <body><a href="flow/">flow/</a>
+ <br/> <a href="eslintrc.json.txt">eslintrc.json.txt</a>
+ <br/></body>
+  </html>
