--- a/documents/development/xml/about-xpath.html
+++ b/documents/development/xml/about-xpath.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/documents/development/css/style.css" >
-    <link rel="stylesheet" type="text/css" href="/documents/development/css/documentation.css" >
+    <link rel="stylesheet" type="text/css" href="../css/style.css" >
+    <link rel="stylesheet" type="text/css" href="../css/documentation.css" >
     <title>一些xpath知识点</title>
   </head>
   <body>
