--- a/documents/index.html
+++ b/documents/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/documents</title></head><body><a href="/documents/development">development/</a> <br/> <a href="/documents/dev-ca.crt">dev-ca.crt</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title></title>
+    </head>
+    <body><a href="development/">development/</a>
+ <br/> <a href="dev-ca.crt">dev-ca.crt</a>
+ <br/></body>
+  </html>
