--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <title></title>
-    <!-- <style type="text/css">
-      body { background-image: url(/documents/resources/images/美景1.jpeg); background-color: #0000007f; }
-    </style> -->
   </head>
   <body>
   <br>
-  <a href="/documents">我的文档</a><br>
-  <a href="/works">works</a> <br>
-  <a href="/react">react-demos</a> <br>
+  <a href="documents">我的文档</a><br>
+  <a href="works">works/</a> <br>
+  <a href="react">react-demos/</a> <br>
+  <a href="scripts">scripts/</a> <br>
+  <a href="lib">lib/</a> <br>
+  <a href="css">css/</a> <br>
 
-    <script type="text/javascript" src="/lib/utils/lodash.js" ></script>
-    <script type="text/javascript" src="/lib/utils/Immutable.js" ></script>
-    <script type="text/javascript" src="/lib/utils/URI.js"></script>
-    <script type="text/javascript" src="/lib/utils/moment.js"></script>
-    <script type="text/javascript" src="/lib/utils/moment-timezone-with-data.js"></script>
-    <script type="text/javascript" src="/lib/utils/custom.js" ></script>
+    <script type="text/javascript" src="lib/utils/lodash.js" ></script>
+    <script type="text/javascript" src="lib/utils/Immutable.js" ></script>
+    <script type="text/javascript" src="lib/utils/URI.js"></script>
+    <script type="text/javascript" src="lib/utils/moment.js"></script>
+    <script type="text/javascript" src="lib/utils/moment-timezone-with-data.js"></script>
+    <script type="text/javascript" src="lib/utils/custom.js" ></script>
   </body>
 </html>
 
