--- a/lib/index.html
+++ b/lib/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/lib</title></head><body><a href="/lib/utils">/lib/utils</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title></title>
+    </head>
+    <body><a href="utils/">utils/</a>
+ <br/></body>
+  </html>
