--- a/lib/utils/index.html
+++ b/lib/utils/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/lib/utils</title></head><body><a href="/lib/utils/URI.js">/lib/utils/URI.js</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title>utils</title>
+    </head>
+    <body><a href="moment-timezone-with-data.js">moment-timezone-with-data.js</a>
+ <br/> <a href="moment.js">moment.js</a>
+ <br/> <a href="custom.js">custom.js</a>
+ <br/> <a href="lodash.js">lodash.js</a>
+ <br/> <a href="Immutable.js">Immutable.js</a>
+ <br/> <a href="URI.js">URI.js</a>
+ <br/></body>
+  </html>
