--- a/react/index.html
+++ b/react/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/react</title></head><body><a href="/react/hello-world">hello-world/</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title></title>
+    </head>
+    <body><a href="hello-world/">hello-world/</a>
+ <br/></body>
+  </html>
