--- a/works/shell/index.html
+++ b/works/shell/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/works/shell</title></head><body><a href="/works/shell/init-rn-proj.sh">init-rn-proj.sh</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title>shell</title>
+    </head>
+    <body><a href="init-rn-proj.sh">init-rn-proj.sh</a>
+ <br/></body>
+  </html>
