--- a/documents/development/books-to-read.html
+++ b/documents/development/books-to-read.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/documents/development/css/style.css" >
-    <link rel="stylesheet" type="text/css" href="/documents/development/css/documentation.css" >
+    <link rel="stylesheet" type="text/css" href="css/style.css" >
+    <link rel="stylesheet" type="text/css" href="css/documentation.css" >
     <title>还是要多读书啊</title>
   </head>
   <body>
