--- a/documents/development/c++/index.html
+++ b/documents/development/c++/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/documents/development/c++</title></head><body><a href="/documents/development/c++/成员函数的指针.html">成员函数的指针.html</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title>development/c++</title>
+    </head>
+    <body><a href="成员函数的指针.html">成员函数的指针.html</a>
+ <br/></body>
+  </html>
