--- a/documents/development/design pattern/visitor/visitor.html
+++ b/documents/development/design pattern/visitor/visitor.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/documents/development/css/style.css" >
-    <link rel="stylesheet" type="text/css" href="/documents/development/css/documentation.css" >
+    <link rel="stylesheet" type="text/css" href="../../css/style.css" >
+    <link rel="stylesheet" type="text/css" href="../../css/documentation.css" >
     <title>设计模式：Visitor</title>
   </head>
   <body>
