--- a/documents/development/git/index.html
+++ b/documents/development/git/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/documents/development/git</title></head><body><a href="/documents/development/git/gitconfig.txt">gitconfig.txt</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title>development/git</title>
+    </head>
+    <body><a href="gitconfig.txt">gitconfig.txt</a>
+ <br/></body>
+  </html>
