--- a/documents/development/html/play-with-basic-html-tag.html
+++ b/documents/development/html/play-with-basic-html-tag.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title id="title">Document</title>
-  <script type="text/javascript" src="/lib/utils/URI.js"></script>
+  <script type="text/javascript" src="../../../lib/utils/URI.js"></script>
   <script type="text/javascript">
     var uri = URI(window.location.href);
     document.title = uri.filename();
   </script>
-  <link rel="stylesheet" type="text/css" href="/documents/development/css/style.css" >
-  <link rel="stylesheet" type="text/css" href="/documents/development/css/documentation.css" >
+  <link rel="stylesheet" type="text/css" href="../css/style.css" >
+  <link rel="stylesheet" type="text/css" href="../css/documentation.css" >
 </head>
 <body>
 
