--- a/documents/development/ios/codesign/xcode8之后打包方式的选择.html
+++ b/documents/development/ios/codesign/xcode8之后打包方式的选择.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/documents/development/css/style.css" >
-    <link rel="stylesheet" type="text/css" href="/documents/development/css/documentation.css" >
+    <link rel="stylesheet" type="text/css" href="../../css/style.css" >
+    <link rel="stylesheet" type="text/css" href="../../css/documentation.css" >
     <title>xcode8之后打包方式的选择</title>
   </head>
   <body>
