--- a/documents/development/ios/coding convention/iOS项目jenkins环境配置文档.html
+++ b/documents/development/ios/coding convention/iOS项目jenkins环境配置文档.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/documents/development/css/style.css" >
-    <link rel="stylesheet" type="text/css" href="/documents/development/css/documentation.css" >
+    <link rel="stylesheet" type="text/css" href="../../css/style.css" >
+    <link rel="stylesheet" type="text/css" href="../../css/documentation.css" >
     <title>iOS项目jenkins环境配置文档</title>
   </head>
   <body>
