--- a/documents/development/ios/deep-link/index.html
+++ b/documents/development/ios/deep-link/index.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/documents/development/ios/deep-link</title></head><body><a href="/documents/development/ios/deep-link/navigate-demo.html">navigate-demo.html</a> <br/> <a href="/documents/development/ios/deep-link/other.html">other.html</a> <br/> <a href="/documents/development/ios/deep-link/recorder-player-snshare.html">recorder-player-snshare.html</a> <br/> <a href="/documents/development/ios/deep-link/navigate.html">navigate.html</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title>development/ios/deep-link</title>
+    </head>
+    <body><a href="navigate-demo.html">navigate-demo.html</a>
+ <br/> <a href="other.html">other.html</a>
+ <br/> <a href="navigate.html">navigate.html</a>
+ <br/> <a href="recorder-player-snshare.html">recorder-player-snshare.html</a>
+ <br/></body>
+  </html>
