--- a/documents/development/ios/universal-link/index.html
+++ b/documents/development/ios/universal-link/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/documents/development/ios/universal-link</title></head><body><a href="/documents/development/ios/universal-link/test-universal-link.html">test-universal-link.html</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title>development/ios/universal-link</title>
+    </head>
+    <body><a href="test-universal-link.html">test-universal-link.html</a>
+ <br/></body>
+  </html>
