--- a/documents/development/javascript/flow/index.html
+++ b/documents/development/javascript/flow/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/documents/development/javascript/flow</title></head><body><a href="/documents/development/javascript/flow/flow null检查.png">flow null检查.png</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title>development/javascript/flow</title>
+    </head>
+    <body><a href="flow null检查.png">flow null检查.png</a>
+ <br/></body>
+  </html>
