--- a/documents/development/linux/archives.html
+++ b/documents/development/linux/archives.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/documents/development/css/documentation.css">
+    <link rel="stylesheet" href="../css/documentation.css">
     <style type="text/css">
       li { font-size:26px; color:gray }
     </style>
-    <script type="text/javascript" src="/lib/utils/URI.js"></script>
+    <script type="text/javascript" src="../../../lib/utils/URI.js"></script>
     <script type="text/javascript">
       var uri = URI(window.location.href);
       document.title = uri.filename();
