--- a/documents/development/linux/index.html
+++ b/documents/development/linux/index.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/documents/development/linux</title></head><body><a href="/documents/development/linux/mount.sh.txt">mount.sh.txt</a> <br/> <a href="/documents/development/linux/nfs.txt">nfs.txt</a> <br/> <a href="/documents/development/linux/ssserver.service.txt">ssserver.service.txt</a> <br/> <a href="/documents/development/linux/archives.html">archives.html</a> <br/> <a href="/documents/development/linux/df.sh.txt">df.sh.txt</a> <br/> <a href="/documents/development/linux/exports">exports</a> <br/> <a href="/documents/development/linux/hibernate.sh.txt">hibernate.sh.txt</a> <br/> <a href="/documents/development/linux/rc.local">rc.local</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title>development/linux</title>
+    </head>
+    <body><a href="archives.html">archives.html</a>
+ <br/> <a href="mount.sh.txt">mount.sh.txt</a>
+ <br/> <a href="nfs.txt">nfs.txt</a>
+ <br/> <a href="ssserver.service.txt">ssserver.service.txt</a>
+ <br/> <a href="df.sh.txt">df.sh.txt</a>
+ <br/> <a href="exports">exports</a>
+ <br/> <a href="hibernate.sh.txt">hibernate.sh.txt</a>
+ <br/> <a href="rc.local">rc.local</a>
+ <br/></body>
+  </html>
