--- a/documents/development/shell/index.html
+++ b/documents/development/shell/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/documents/development/shell</title></head><body><a href="/documents/development/shell/bash语法.pdf">bash语法.pdf</a> <br/> <a href="/documents/development/shell/shell-programming.html">shell-programming.html</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title>development/shell</title>
+    </head>
+    <body><a href="shell-programming.html">shell-programming.html</a>
+ <br/> <a href="bash语法.pdf">bash语法.pdf</a>
+ <br/></body>
+  </html>
