--- a/scripts/index.html
+++ b/scripts/index.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8"><title>/scripts</title></head><body><a href="/scripts/build.sh">build.sh</a> <br/> <a href="/scripts/convert-to-exact.sh">convert-to-exact.sh</a> <br/> <a href="/scripts/prepend-timestamp.sh">prepend-timestamp.sh</a> <br/> <a href="/scripts/timestamp_utils.sh">timestamp_utils.sh</a> <br/></body></html>
+
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <meta charset="UTF-8"><title></title>
+    </head>
+    <body><a href="build.sh">build.sh</a>
+ <br/> <a href="convert-to-exact.sh">convert-to-exact.sh</a>
+ <br/> <a href="prepend-timestamp.sh">prepend-timestamp.sh</a>
+ <br/> <a href="timestamp_utils.sh">timestamp_utils.sh</a>
+ <br/></body>
+  </html>
