--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <script type="text/javascript" src="lib/utils/moment.js"></script>
     <script type="text/javascript" src="lib/utils/moment-timezone-with-data.js"></script>
     <script type="text/javascript" src="lib/utils/custom.js" ></script>
+
+    <audio autoplay loop>
+      <source src="assets/bg.mp3">
+    </audio>
   </body>
 </html>
 
